# cwars

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml  test-coverage.yml
client/: cwars.py
client/libcwars/: __init__.py
include/: config.h  entity.h  game.h  server.h  utils.h
include/client/: client.h  client_fsm.h  game.h  latency.h  message_handler.h
include/common/: config.h  ctimer.h  entity.h  fixed.h  linked_list.h  logging.h  map.h  message.h  utils.h  vector.h
include/server/: client.h  config.h  game.h  message_handler.h  server.h  server_entity.h  server_map.h  types.h
scripts/: gen_certs.sh
src/: entity.c  game.c  main.c  server.c  utils.c  vector.c
src/client/: client.c  client_fsm.c  client_main.c  game.c  latency.c  message_handler.c
src/common/: ctimer.c  entity.c  fixed.c  linked_list.c  logging.c  map.c  message.c  utils.c  vector.c
src/server/: client.c  game.c  message_handler.c  server.c  server_entity.c  server_main.c  server_map.c
test/linked_list/: test_linked_list.c
test/message/: test_message.c
test/utils/: test_utils.c
test/vector/: test_vector.c
